common/ops/k8s/dev/manifests/ingress-tcp.yaml
# TCP middleware entrypoints. Each public interface uses a dedicated port.
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: postgresql
  namespace: bass-dev
spec:
  entryPoints:
    - postgresql
  routes:
    - match: HostSNI("*")
      services:
        - name: bass-postgresql
          port: 5432
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: redis
  namespace: bass-dev
spec:
  entryPoints:
    - redis
  routes:
    - match: HostSNI("*")
      services:
        - name: bass-redis-master
          port: 6379
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: nats
  namespace: bass-dev
spec:
  entryPoints:
    - nats
  routes:
    - match: HostSNI("*")
      services:
        - name: bass-nats
          port: 4222
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: dtm-grpc
  namespace: bass-dev
spec:
  entryPoints:
    - dtm-grpc
  routes:
    - match: HostSNI("*")
      services:
        - name: bass-dtm
          port: 36790
